--- a/eloge-portfolio/app/globals.css
+++ b/eloge-portfolio/app/globals.css
@@ -2,4 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
- 
+/* Regular */
+@font-face {
+    font-family: 'khand';
+    src: url('../public/fonts/Khand-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* Medium */
+@font-face {
+    font-family: 'khand';
+    src: url('../public/fonts/Khand-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+/* Semibold */
+@font-face {
+    font-family: 'khand';
+    src: url('../public/fonts/Khand-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+/* Bold */
+@font-face {
+    font-family: 'khand';
+    src: url('../public/fonts/Khand-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* Light */
+@font-face {
+    font-family: 'khand';
+    src: url('../public/fonts/Khand-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
