--- a/eloge-portfolio/app/globals.css
+++ b/eloge-portfolio/app/globals.css
@@ -85,3 +85,55 @@
   .tooltip-animation {
     animation: fadeIn 0.3s ease-out;
   }
+
+  .loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1E1E1E;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .loader-text {
+    font-family: 'khand', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #FFC700;
+    margin: 20px;
+  }
+
+  .progress-bar {
+    width: 600px;
+    height: 50px;
+    background-color: #333;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+
+  .progress {
+    width: 0%;
+    height: 100%;
+    background-color: #FFC700;
+    animation: progress-animation 3s ease-in-out infinite; 
+  }
+
+  @keyframes progress-animation {
+    0% {width: 0%;}
+    50% {width: 100%;}
+    100% {width: 0%;}
+  }
+
+  .loader-container.fade-out {
+    animation: fade-out 0.5s ease-out forwards;
+  }
+
+  @keyframes fade-out {
+    from { opacity: 1;}
+    to {opacity: 0; visibility: hidden;}
+  }
