--- a/eloge-portfolio/app/globals.css
+++ b/eloge-portfolio/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
+.bg-blur {
+  backdrop-filter: blur(10px); /* Adjust the blur amount as needed */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+
 /* Regular */
 @font-face {
     font-family: 'khand';
