--- a/eloge-portfolio/app/globals.css
+++ b/eloge-portfolio/app/globals.css
@@ -7,8 +7,13 @@ html {
 }
 
 .bg-blur {
-  backdrop-filter: blur(10px); /* Adjust the blur amount as needed */
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  backdrop-filter: blur(10px);  
+  background-color: rgba(0, 0, 0, 0.5);  
+}
+
+.bg-blur-service {
+  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 
