--- a/eloge-portfolio/app/globals.css
+++ b/eloge-portfolio/app/globals.css
@@ -16,6 +16,11 @@ html {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.hovering-blur{
+  backdrop-filter: blur(1px);
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 
 /* Regular */
 @font-face {
